<resources>
    <string name="app_name">DonApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">DonApp</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="login_fragment_label">Entra a tu usuario</string>
    <string name="crear_evento_fragment_label">Crea un nuevo evento</string>
    <string name="signup_fragment_label">Crea un nuevo usuario</string>
    <string name="add_first_fragment_label"> Agregar</string>
    <string name="res_fragment_label"> Evento Creado</string>
    <string name="next">Encuentra Programas o Donaciones</string>
    <string name="previous">Devolverse</string>
    <string name="existe">Entra a tu usuario </string>
    <string name="no_existe">Regístrate </string>
    <string name="add">¿Quieres agregar algo?</string>
    <string name="want_to_add">¿Quieres agregar un Programa o una Donación?</string>
    <string-array name="org_array">
        <item>Seleccionar Organización</item>
        <item>Crear nueva Organización</item>
    </string-array>
    <string name="hello_first_fragment">Bienvenido a DonApp!</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>